# LinuxPlay

./: .bandit  .coverage  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: WAYLAND.md
src/linuxplay/: client.py  host.py  start.py
tests/: conftest.py  test_auth_challenge_response.py  test_client_dialogs.py  test_client_utils.py  test_hardware_detection.py  test_integration.py  test_security.py  test_socket_optimization.py  test_start_utils.py  test_wayland_support.py
