[project]
name = "linuxplay"
version = "0.1.0"
description = "Ultra low latency remote desktop and game streaming. Host on Linux, client on Linux or Windows."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-2.0-only"}
authors = [
    {name = "Techlm77", email = "techlm77@users.noreply.github.com"}
]
keywords = ["remote-desktop", "streaming", "low-latency", "ffmpeg", "udp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video :: Capture",
]

dependencies = [
    "PyOpenGL>=3.1.6",
    "PyOpenGL-accelerate>=3.1.6",
    "av>=16.0.0",
    "numpy>=2.3.4",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "psutil>=5.9.0",
    "evdev>=1.6.0; sys_platform == 'linux'",
    "cryptography>=46.0.0",
    "nvidia-ml-py>=12.560.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.3",
    "bandit>=1.8.6",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
]

[project.scripts]
linuxplay = "linuxplay.start:main"
linuxplay-host = "linuxplay.host:main"
linuxplay-client = "linuxplay.client:main"

[project.urls]
Homepage = "https://github.com/Techlm77/LinuxPlay"
Repository = "https://github.com/Techlm77/LinuxPlay"
Issues = "https://github.com/Techlm77/LinuxPlay/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/linuxplay"]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
    "PERF",  # perflint
    "RUF",   # ruff-specific rules
]
ignore = [
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "N802",    # function name should be lowercase (Qt conventions)
    "N803",    # argument name should be lowercase (Qt conventions)
    "N806",    # variable in function should be lowercase (Qt conventions)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/linuxplay/client.py" = ["PLC0415", "PLR2004"]
"src/linuxplay/host.py" = ["PLC0415", "ERA001"]
"src/linuxplay/start.py" = ["PLW0603"]
"tests/test_*.py" = ["PLC0415", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["linuxplay"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "bandit>=1.8.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    ".venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]